--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,7 @@
-# These individuals contributed to the hbnb project in this repository 
+# These individuals contributed to the hbnb project in this repository
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+Simo Echaarani <echaaranimohamed@gmail.com>
+Wafa Gahboub <your@Email.here>
